# qq-agent-bridge

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: config.example.yaml  config.test.yaml
src/qq_agent_bridge/: __init__.py  __main__.py  onebot.py  permissions.py  session.py  webui.py
src/qq_agent_bridge/backends/: __init__.py  _openai_compat.py  base.py  cli_backend.py  hermes.py  openai_backend.py  openclaw.py
src/qq_agent_bridge/webui_static/: index.html
